# abq

./: .env.template  .gitignore  CONTRIBUTING.org  LICENSE  Makefile  README.md  README.org  abq-spec.org  abq.el  agent-bus-spec.org  codecov.yml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: MULTI_HOST.org  SCENARIOS.org  TEST_PLAN.org  abq-state-machine.dot
docs/adr/: 001-transport-selection.md  001-transport-selection.org  002-session-workflow-retrospective.org
docs/presentations/: 01-rebasing-over-your-coworker.org  02-module-level-constants.org  03-eating-dogfood.org  04-agents-md-pattern.org  05-dead-links-living-code.org  README.org
docs/reviews/: CLI_UX_REVIEW.md  CTO_REVIEW.md  CTO_REVIEW_2.md  CTO_REVIEW_3.md  DEVOPS_REVIEW.md  DEVOPS_REVIEW_2.md  DEVOPS_REVIEW_3.md  L7_REVIEW.md  L7_REVIEW_2.md  L7_REVIEW_3.md  LEGAL_REVIEW.md  LEGAL_REVIEW_2.md  LEGAL_REVIEW_3.md  RELEASE_DECISION.md  RELEASE_DECISION_2.md  RELEASE_DECISION_3.md  RELEASE_DECISION_4.md  SECURITY_REVIEW.md  SECURITY_REVIEW_2.md  SECURITY_REVIEW_3.md
docs/scenarios/: demo.sh
docs/scenarios/01-test-runner/: handler.sh
lib/python/abq/: __init__.py  cli.py  core.py  watcher.py
scenarios/: demo.sh
scenarios/05-chaos-monkey/: monkey.sh
schemas/: request.schema.json  response.schema.json
tests/: __init__.py  test_cli.py  test_core.py  test_protocol.py  test_watcher.py
