[project]
name = "abq"
version = "1.0.0"
description = "Agent Bus Queue - minimal filesystem-based message bus for AI agent coordination"
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "JW"}
]
keywords = ["agent", "queue", "ipc", "message-bus", "ai", "coordination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.scripts]
abq = "abq.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/python/abq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib/python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
